# Estella

./: .gitignore  Dockerfile  README.md  bot.py  config.py  docker-compose.yaml  env.py  pyproject.toml  schema.sql  test.js
ext/: developer.py  dictionary.py  general.py  hint.py  minecraft.py  server.py
ext/minecraft/: __init__.py  cache.py  views.py
extensions/: developer.py  general.py  server.py  time.py
libs/dictcc/: __init__.py  client.py
utils/: __init__.py  audio.py  functions.py  logging.py  motd.py  subclasses.py  views.py
