[tool.poetry]
name = "estella"
version = "0.1.0"
description = ""
authors = ["du-cki <qwuakers@gmail.com>"]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
"discord.py" = "^2.4.0"
aiohttp = "^3.9.5"
jishaku = {git = "https://github.com/scarletcafe/jishaku"}
mcstatus = "^11.1.1"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.25.1"
asqlite = "^2.0.0"
pytz = "^2024.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
